Bug 301682 - Konsole crashed while focus was changing
Summary: Konsole crashed while focus was changing
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.9
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-11 20:14 UTC by Alex Merry
Modified: 2012-06-14 09:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Merry 2012-06-11 20:14:10 UTC
Application: konsole (2.9)
KDE Platform Version: 4.8.4 (4.8.4) (Compiled from sources)
Qt Version: 4.8.2
Operating System: Linux 3.3.8-1-ARCH x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
- What I was doing when the application crashed:

I was just tabbing between windows on my desktop.  I had about 7 tabs open in Konsole, and in the active one I was searching for the string "MPRIS2", which occurred several times (the tab was running `amarok --debug`).  I had previous moved through several of the occurrences.

The assert that was triggered:
ASSERT: "searchBar()" in file /home/kde-devel/src/kde/konsole/src/SessionController.cpp, line 995

-- Backtrace:
Application: Konsole (kdeinit4), signal: Aborted
Using host libthread_db library "/lib/libthread_db.so.1".
[KCrash Handler]
#6  0x00007faef010dc35 in raise () from /lib/libc.so.6
#7  0x00007faef010f0b8 in abort () from /lib/libc.so.6
#8  0x00007faef1e0e254 in qt_message_output(QtMsgType, char const*) () from /usr/lib/libQtCore.so.4
#9  0x00007faef1e0e408 in ?? () from /usr/lib/libQtCore.so.4
#10 0x00007faef1e0e594 in qFatal(char const*, ...) () from /usr/lib/libQtCore.so.4
#11 0x00007faede95eabb in Konsole::SessionController::updateSearchFilter (this=0x1a17c10) at /home/kde-devel/src/kde/konsole/src/SessionController.cpp:995
#12 0x00007faede962451 in Konsole::SessionController::qt_static_metacall (_o=0x1a17c10, _c=QMetaObject::InvokeMetaMethod, _id=50, _a=0x7fff210adbd0) at /home/kde-devel/build/kde/konsole/src/SessionController.moc:195
#13 0x00007faef1f27dcf in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#14 0x00007faede94f111 in Konsole::ScreenWindow::outputChanged (this=0x19c0e10) at /home/kde-devel/build/kde/konsole/src/ScreenWindow.moc:107
#15 0x00007faede94ef1f in Konsole::ScreenWindow::notifyOutputChanged (this=0x19c0e10) at /home/kde-devel/src/kde/konsole/src/ScreenWindow.cpp:292
#16 0x00007faede94efeb in Konsole::ScreenWindow::qt_static_metacall (_o=0x19c0e10, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0x7fff210adda0) at /home/kde-devel/build/kde/konsole/src/ScreenWindow.moc:59
#17 0x00007faef1f27dcf in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#18 0x00007faede9169ab in Konsole::Emulation::outputChanged (this=0x19cb840) at /home/kde-devel/build/kde/konsole/src/Emulation.moc:216
#19 0x00007faede915ff8 in Konsole::Emulation::showBulk (this=0x19cb840) at /home/kde-devel/src/kde/konsole/src/Emulation.cpp:302
#20 0x00007faede9166b8 in Konsole::Emulation::qt_static_metacall (_o=0x19cb840, _c=QMetaObject::InvokeMetaMethod, _id=25, _a=0x7fff210adf40) at /home/kde-devel/build/kde/konsole/src/Emulation.moc:126
#21 0x00007faef1f27dcf in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#22 0x00007faef1f270dc in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#23 0x00007faef10a7f7c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#24 0x00007faef10ac3fa in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#25 0x00007faef2ffadfa in KApplication::notify (this=0x7fff210ae960, receiver=0x19cb890, event=0x7fff210ae680) at /home/kde-devel/src/kde/kdelibs/kdeui/kernel/kapplication.cpp:311
#26 0x00007faef1f128ee in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#27 0x00007faef1f43352 in ?? () from /usr/lib/libQtCore.so.4
#28 0x00007faef1f40484 in ?? () from /usr/lib/libQtCore.so.4
#29 0x00007faeec6ff4a5 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#30 0x00007faeec6ff7d8 in ?? () from /usr/lib/libglib-2.0.so.0
#31 0x00007faeec6ff894 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#32 0x00007faef1f40ae6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#33 0x00007faef11482fe in ?? () from /usr/lib/libQtGui.so.4
#34 0x00007faef1f1163f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#35 0x00007faef1f118c8 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#36 0x00007faef1f16568 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#37 0x00007faedec0b55b in kdemain (argc=3, argv=0xf13b80) at /home/kde-devel/src/kde/konsole/src/main.cpp:85
#38 0x0000000000406d88 in launch (argc=3, _name=0xf0cd98 "konsole", args=0xf0cde1 "", cwd=0x0, envc=0, envs=0xf0cde9 "", reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x40d267 "0") at /home/kde-devel/src/kde/kdelibs/kinit/kinit.cpp:734
#39 0x0000000000407e99 in handle_launcher_request (sock=8, who=0x40d504 "launcher") at /home/kde-devel/src/kde/kdelibs/kinit/kinit.cpp:1226
#40 0x0000000000408751 in handle_requests (waitForPid=0) at /home/kde-devel/src/kde/kdelibs/kinit/kinit.cpp:1419
#41 0x000000000040a313 in main (argc=4, argv=0x7fff210af5c8, envp=0x7fff210af5f0) at /home/kde-devel/src/kde/kdelibs/kinit/kinit.cpp:1907

Reported using DrKonqi
Comment 1 Alex Merry 2012-06-11 20:28:55 UTC
It happened again, and I was doing less stuff this time, so it might make it more obvious (also, my previous account may have had inaccuracies).

I had two tabs open.  The hidden one had "amarok --debug" running, with an active search.

I had Konsole focussed, and double-clicked a track in the Amarok playlist.  This had the twin effect of making Konsole lose focus and producing more output in the hidden konsole tab, some of which would have contained the search term.
Comment 2 Alex Merry 2012-06-11 20:38:09 UTC
OK, third time.  Definitely not the focus-changing.  It also doesn't happen when the tab with the search active is on top, only when it is hidden.
Comment 3 Lindsay Roberts 2012-06-11 21:02:21 UTC
This is almost certainly related to my change for https://bugs.kde.org/show_bug.cgi?id=168769 - will investigate.
Comment 4 Lindsay Roberts 2012-06-13 19:25:54 UTC
Confirmed caused by the fix for issue 168769. Any updates to background tabs with searches active would trigger the bug.

Patch has been posted to Review Board.
Comment 5 Jekyll Wu 2012-06-14 09:13:30 UTC
Git commit ebedf28f4504f45910cab2da22c93034d9f4d0b5 by Jekyll Wu.
Committed on 14/06/2012 at 07:29.
Pushed by jekyllwu into branch 'master'.

Do not update the search result for the session in inactive tab

Thanks to Lindsay Roberts<linds.r@gmail.com> for research and patch
FIXED-IN: 4.9.0
REVIEW:105244

M  +1    -3    src/SessionController.cpp

http://commits.kde.org/konsole/ebedf28f4504f45910cab2da22c93034d9f4d0b5