Do not update the search result for the session in inactive tab

Thanks to Lindsay Roberts<linds.r@gmail.com> for research and patch

BUG: 301682
FIXED-IN: 4.9.0
REVIEW:105244